--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Ami sob somoy valo vabea cholbo</h1>
     <h3>He is a goood Boy.</h3>
+    <img src="david.jpg" alt="">
 </body>
 </html>
