--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Ami sob somoy valo vabea cholbo</h1>
-    <h3>He is a goood Boy.</h3>
+    <h3>He is a good Boy.</h3>
+    <h3>I am a web devoloper.</h3>
     <img src="david.jpg" alt="">
 </body>
 </html>
