--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h3>I am a web devoloper.</h3>
     <img src="david.jpg" alt="">
     <h4>I am working hard for get a web devoloper. Now i am a successful man. I love You.</h4>
-    <p>Allah ami jeno sokol pap thakea mukto thaktea pari sea thwfiq tumi amakea dan koro.</p>
+    <p>Allah ami jeno sokol pap thakea mukto thaktea pari sea thwfiq tumi amakea dan koro. ami jeno sohoj sorol pothea choltea pari. I love You.</p>
 </body>
 </html>
