--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ami sob somoy valo vabea cholbo</h1>
-    <h3>He is a good Boy. I want to reach My Dream Goal.</h3>
+    <h3>He is a very good Boy. I want to reach My Dream Goal.</h3>
     <h3>I am a web devoloper.</h3>
     <img src="david.jpg" alt="">
     <h4>I am working hard for get a web devoloper. Now i am a successful man. I love You.</h4>
